// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly applies the theme context className 1`] = `
<div
  id="test"
>
  <fieldset
    class="fieldset orion-fusion-theme fieldset orion-fusion-theme"
  >
    <div
      class="fieldset-children"
    >
      <div
        class="field orion-fusion-theme field-inline precision"
      >
        <div
          class="label-group"
        >
          <label
            class="label"
            for="test-precision-select"
            id="test-precision-select-label"
          >
            Precision
          </label>
          <div
            class="error-icon-hidden"
          >
            <svg
              class="tui-Icon icon IconError orion-fusion-theme"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 48 48"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
                fill="#E50000"
              />
              <path
                d="M7 21.5h34v5H7v-5z"
                fill="#FFF"
              />
            </svg>
          </div>
        </div>
        <div
          aria-describedby="terra-select-screen-reader-description-69"
          aria-disabled="false"
          aria-expanded="false"
          aria-haspopup="true"
          aria-label="Precision, Precision"
          class="select default orion-fusion-theme"
          data-terra-select="true"
          data-terra-select-combobox="true"
          id="test-precision-select"
          role="button"
          tabindex="0"
        >
          <div
            class="visually-hidden-component"
            hidden=""
          >
            <span
              id="terra-select-screen-reader-label-66"
            >
              Precision
            </span>
            <span
              id="terra-select-screen-reader-description-69"
            >
              Collapsed combobox. List of options. Use up and down arrow keys to navigate through options. Press enter to select an option.
            </span>
          </div>
          <div
            aria-label="Precision"
            class="display"
          >
            <div
              aria-hidden="true"
              class="placeholder"
              id="terra-select-screen-reader-placeholder-68"
            >
              Precision
            </div>
          </div>
          <div
            class="toggle"
            data-terra-form-select-toggle="true"
          >
            <span
              class="arrow-icon"
            />
          </div>
          <span
            aria-live="off"
            class="visually-hidden-component"
          />
        </div>
      </div>
      <div
        class="field orion-fusion-theme field-inline granularity"
      >
        <div
          class="label-group"
        >
          <label
            class="label"
            for="test-granularity-select"
            id="test-granularity-select-label"
          >
            Granularity
          </label>
          <div
            class="error-icon-hidden"
          >
            <svg
              class="tui-Icon icon IconError orion-fusion-theme"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 48 48"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
                fill="#E50000"
              />
              <path
                d="M7 21.5h34v5H7v-5z"
                fill="#FFF"
              />
            </svg>
          </div>
        </div>
        <div
          aria-describedby="terra-select-screen-reader-description-74"
          aria-disabled="false"
          aria-expanded="false"
          aria-haspopup="true"
          aria-label="Granularity, Granularity"
          class="select default orion-fusion-theme"
          data-terra-select="true"
          data-terra-select-combobox="true"
          id="test-granularity-select"
          role="button"
          tabindex="0"
        >
          <div
            class="visually-hidden-component"
            hidden=""
          >
            <span
              id="terra-select-screen-reader-label-71"
            >
              Granularity
            </span>
            <span
              id="terra-select-screen-reader-description-74"
            >
              Collapsed combobox. List of options. Use up and down arrow keys to navigate through options. Press enter to select an option.
            </span>
          </div>
          <div
            aria-label="Granularity"
            class="display"
          >
            <div
              aria-hidden="true"
              class="placeholder"
              id="terra-select-screen-reader-placeholder-73"
            >
              Granularity
            </div>
          </div>
          <div
            class="toggle"
            data-terra-form-select-toggle="true"
          >
            <span
              class="arrow-icon"
            />
          </div>
          <span
            aria-live="off"
            class="visually-hidden-component"
          />
        </div>
      </div>
      <div
        aria-live="polite"
      />
    </div>
  </fieldset>
</div>
`;

exports[`should render Clinical Onset picker with the correct label for date 1`] = `
<div
  id="test"
>
  <Fieldset
    className="fieldset"
    isLegendHidden={false}
    legendAttrs={Object {}}
    required={false}
  >
    <InjectIntl(SelectField)
      className="field-inline precision"
      defaultValue="before"
      label="Terra.onsetPicker.precision"
      labelAttrs={
        Object {
          "id": "test-precision-select-label",
        }
      }
      onChange={[Function]}
      placeholder="Terra.onsetPicker.precision"
      selectId="test-precision-select"
    >
      <Option
        disabled={false}
        display="Terra.onsetPicker.precisionOnAt"
        key="on/at"
        value="on/at"
      />
      <Option
        disabled={false}
        display="Terra.onsetPicker.precisionAbout"
        key="about"
        value="about"
      />
      <Option
        disabled={false}
        display="Terra.onsetPicker.precisionBefore"
        key="before"
        value="before"
      />
      <Option
        disabled={false}
        display="Terra.onsetPicker.precisionAfter"
        key="after"
        value="after"
      />
      <Option
        disabled={false}
        display="Terra.onsetPicker.precisionUnknown"
        key="unknown"
        value="unknown"
      />
    </InjectIntl(SelectField)>
    <InjectIntl(SelectField)
      className="field-inline granularity"
      label="Terra.onsetPicker.granularity"
      labelAttrs={
        Object {
          "id": "test-granularity-select-label",
        }
      }
      onChange={[Function]}
      placeholder="Terra.onsetPicker.granularity"
      selectId="test-granularity-select"
      value="date"
    >
      <Option
        disabled={false}
        display="Terra.onsetPicker.age"
        key="age"
        value="age"
      />
      <Option
        disabled={false}
        display="Terra.onsetPicker.year"
        key="year"
        value="year"
      />
      <Option
        disabled={false}
        display="Terra.onsetPicker.month"
        key="month"
        value="month"
      />
      <Option
        disabled={false}
        display="Terra.onsetPicker.date"
        key="date"
        value="date"
      />
    </InjectIntl(SelectField)>
    <div
      aria-live="polite"
    >
      <Field
        className="field-inline date"
        error={null}
        errorIcon={
          <IconError
            viewBox="0 0 48 48"
            xmlns="http://www.w3.org/2000/svg"
          />
        }
        help={null}
        hideRequired={false}
        isInline={false}
        isInvalid={false}
        isLabelHidden={false}
        label="Terra.onsetPicker.date"
        labelAttrs={
          Object {
            "aria-hidden": "true",
            "id": "test-date-input-label",
          }
        }
        required={false}
        showOptional={false}
      >
        <InjectIntl(DatePicker)
          maxDate="2017-11-15"
          minDate="2011-08-16"
          name="test-date-input"
          onChangeRaw={[Function]}
          selectedDate="2014-08-16"
        />
      </Field>
    </div>
  </Fieldset>
</div>
`;

exports[`should render Clinical Onset picker with the correct label for month and year 1`] = `
<div
  id="test"
>
  <Fieldset
    className="fieldset"
    isLegendHidden={false}
    legendAttrs={Object {}}
    required={false}
  >
    <InjectIntl(SelectField)
      className="field-inline precision"
      defaultValue="before"
      label="Terra.onsetPicker.precision"
      labelAttrs={
        Object {
          "id": "test-precision-select-label",
        }
      }
      onChange={[Function]}
      placeholder="Terra.onsetPicker.precision"
      selectId="test-precision-select"
    >
      <Option
        disabled={false}
        display="Terra.onsetPicker.precisionOnAt"
        key="on/at"
        value="on/at"
      />
      <Option
        disabled={false}
        display="Terra.onsetPicker.precisionAbout"
        key="about"
        value="about"
      />
      <Option
        disabled={false}
        display="Terra.onsetPicker.precisionBefore"
        key="before"
        value="before"
      />
      <Option
        disabled={false}
        display="Terra.onsetPicker.precisionAfter"
        key="after"
        value="after"
      />
      <Option
        disabled={false}
        display="Terra.onsetPicker.precisionUnknown"
        key="unknown"
        value="unknown"
      />
    </InjectIntl(SelectField)>
    <InjectIntl(SelectField)
      className="field-inline granularity"
      label="Terra.onsetPicker.granularity"
      labelAttrs={
        Object {
          "id": "test-granularity-select-label",
        }
      }
      onChange={[Function]}
      placeholder="Terra.onsetPicker.granularity"
      selectId="test-granularity-select"
      value="month"
    >
      <Option
        disabled={false}
        display="Terra.onsetPicker.age"
        key="age"
        value="age"
      />
      <Option
        disabled={false}
        display="Terra.onsetPicker.year"
        key="year"
        value="year"
      />
      <Option
        disabled={false}
        display="Terra.onsetPicker.month"
        key="month"
        value="month"
      />
      <Option
        disabled={false}
        display="Terra.onsetPicker.date"
        key="date"
        value="date"
      />
    </InjectIntl(SelectField)>
    <div
      aria-live="polite"
    >
      <InjectIntl(SelectField)
        className="field-inline month"
        label="Terra.onsetPicker.month"
        labelAttrs={
          Object {
            "id": "test-month-select-label",
          }
        }
        onChange={[Function]}
        placeholder="Terra.onsetPicker.month"
        selectId="test-month-select"
      >
        <Option
          disabled={false}
          display="Terra.onsetPicker.january"
          key="0"
          value="0"
        />
        <Option
          disabled={false}
          display="Terra.onsetPicker.february"
          key="1"
          value="1"
        />
        <Option
          disabled={false}
          display="Terra.onsetPicker.march"
          key="2"
          value="2"
        />
        <Option
          disabled={false}
          display="Terra.onsetPicker.april"
          key="3"
          value="3"
        />
        <Option
          disabled={false}
          display="Terra.onsetPicker.may"
          key="4"
          value="4"
        />
        <Option
          disabled={false}
          display="Terra.onsetPicker.june"
          key="5"
          value="5"
        />
        <Option
          disabled={false}
          display="Terra.onsetPicker.july"
          key="6"
          value="6"
        />
        <Option
          disabled={false}
          display="Terra.onsetPicker.august"
          key="7"
          value="7"
        />
        <Option
          disabled={false}
          display="Terra.onsetPicker.september"
          key="8"
          value="8"
        />
        <Option
          disabled={false}
          display="Terra.onsetPicker.october"
          key="9"
          value="9"
        />
        <Option
          disabled={false}
          display="Terra.onsetPicker.november"
          key="10"
          value="10"
        />
        <Option
          disabled={false}
          display="Terra.onsetPicker.december"
          key="11"
          value="11"
        />
      </InjectIntl(SelectField)>
      <InjectIntl(SelectField)
        className="field-inline year"
        label="Terra.onsetPicker.year"
        labelAttrs={
          Object {
            "id": "test-year-select-label",
          }
        }
        onChange={[Function]}
        placeholder="Terra.onsetPicker.year"
        selectId="test-year-select"
      >
        <Option
          disabled={false}
          display="2011"
          key="2011"
          value="2011"
        />
        <Option
          disabled={false}
          display="2012"
          key="2012"
          value="2012"
        />
        <Option
          disabled={false}
          display="2013"
          key="2013"
          value="2013"
        />
        <Option
          disabled={false}
          display="2014"
          key="2014"
          value="2014"
        />
        <Option
          disabled={false}
          display="2015"
          key="2015"
          value="2015"
        />
        <Option
          disabled={false}
          display="2016"
          key="2016"
          value="2016"
        />
        <Option
          disabled={false}
          display="2017"
          key="2017"
          value="2017"
        />
      </InjectIntl(SelectField)>
    </div>
  </Fieldset>
</div>
`;

exports[`should render Clinical Onset picker with the correct label for precision, granularity and age 1`] = `
<div
  id="test"
>
  <Fieldset
    className="fieldset"
    isLegendHidden={false}
    legendAttrs={Object {}}
    required={false}
  >
    <InjectIntl(SelectField)
      className="field-inline precision"
      defaultValue="before"
      label="Terra.onsetPicker.precision"
      labelAttrs={
        Object {
          "id": "test-precision-select-label",
        }
      }
      onChange={[Function]}
      placeholder="Terra.onsetPicker.precision"
      selectId="test-precision-select"
    >
      <Option
        disabled={false}
        display="Terra.onsetPicker.precisionOnAt"
        key="on/at"
        value="on/at"
      />
      <Option
        disabled={false}
        display="Terra.onsetPicker.precisionAbout"
        key="about"
        value="about"
      />
      <Option
        disabled={false}
        display="Terra.onsetPicker.precisionBefore"
        key="before"
        value="before"
      />
      <Option
        disabled={false}
        display="Terra.onsetPicker.precisionAfter"
        key="after"
        value="after"
      />
      <Option
        disabled={false}
        display="Terra.onsetPicker.precisionUnknown"
        key="unknown"
        value="unknown"
      />
    </InjectIntl(SelectField)>
    <InjectIntl(SelectField)
      className="field-inline granularity"
      label="Terra.onsetPicker.granularity"
      labelAttrs={
        Object {
          "id": "test-granularity-select-label",
        }
      }
      onChange={[Function]}
      placeholder="Terra.onsetPicker.granularity"
      selectId="test-granularity-select"
      value="age"
    >
      <Option
        disabled={false}
        display="Terra.onsetPicker.age"
        key="age"
        value="age"
      />
      <Option
        disabled={false}
        display="Terra.onsetPicker.year"
        key="year"
        value="year"
      />
      <Option
        disabled={false}
        display="Terra.onsetPicker.month"
        key="month"
        value="month"
      />
      <Option
        disabled={false}
        display="Terra.onsetPicker.date"
        key="date"
        value="date"
      />
    </InjectIntl(SelectField)>
    <div
      aria-live="polite"
    >
      <InputField
        className="field-inline age"
        defaultValue={3}
        disabled={false}
        error={null}
        errorIcon={
          <IconError
            viewBox="0 0 48 48"
            xmlns="http://www.w3.org/2000/svg"
          />
        }
        help={null}
        hideRequired={false}
        inputAttrs={
          Object {
            "max": 6,
            "min": 0,
            "step": 1,
            "type": "number",
          }
        }
        inputId="test-age-input"
        isIncomplete={false}
        isInline={false}
        isInvalid={false}
        isLabelHidden={false}
        label="Terra.onsetPicker.age"
        labelAttrs={
          Object {
            "id": "test-age-input-label",
          }
        }
        onChange={[Function]}
        required={false}
        showOptional={false}
      />
      <InjectIntl(SelectField)
        className="field-inline age-unit"
        defaultValue="years"
        label="Terra.onsetPicker.agePrecision"
        labelAttrs={
          Object {
            "id": "test-age-unit-select-label",
          }
        }
        onChange={[Function]}
        placeholder="Terra.onsetPicker.agePrecision"
        selectId="test-age-unit-select"
      >
        <Option
          disabled={false}
          display="Terra.onsetPicker.agePrecisionWeek"
          key="weeks"
          value="weeks"
        />
        <Option
          disabled={false}
          display="Terra.onsetPicker.agePrecisionMonth"
          key="months"
          value="months"
        />
        <Option
          disabled={false}
          display="Terra.onsetPicker.agePrecisionYear"
          key="years"
          value="years"
        />
      </InjectIntl(SelectField)>
    </div>
  </Fieldset>
</div>
`;

exports[`should render a default onset picker with specified onset date 1`] = `
<div
  id="test"
>
  <fieldset
    class="fieldset fieldset"
  >
    <div
      class="fieldset-children"
    >
      <div
        class="field field-inline precision"
      >
        <div
          class="label-group"
        >
          <label
            class="label"
            for="test-precision-select"
            id="test-precision-select-label"
          >
            Precision
          </label>
          <div
            class="error-icon-hidden"
          >
            <svg
              class="tui-Icon icon IconError"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 48 48"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
                fill="#E50000"
              />
              <path
                d="M7 21.5h34v5H7v-5z"
                fill="#FFF"
              />
            </svg>
          </div>
        </div>
        <div
          aria-describedby="terra-select-screen-reader-description-4"
          aria-disabled="false"
          aria-expanded="false"
          aria-haspopup="true"
          aria-label="Precision, Precision"
          class="select default"
          data-terra-select="true"
          data-terra-select-combobox="true"
          id="test-precision-select"
          role="button"
          tabindex="0"
        >
          <div
            class="visually-hidden-component"
            hidden=""
          >
            <span
              id="terra-select-screen-reader-label-1"
            >
              Precision
            </span>
            <span
              id="terra-select-screen-reader-description-4"
            >
              Collapsed combobox. List of options. Use up and down arrow keys to navigate through options. Press enter to select an option.
            </span>
          </div>
          <div
            aria-label="Precision"
            class="display"
          >
            <div
              aria-hidden="true"
              class="placeholder"
              id="terra-select-screen-reader-placeholder-3"
            >
              Precision
            </div>
          </div>
          <div
            class="toggle"
            data-terra-form-select-toggle="true"
          >
            <span
              class="arrow-icon"
            />
          </div>
          <span
            aria-live="off"
            class="visually-hidden-component"
          />
        </div>
      </div>
      <div
        class="field field-inline granularity"
      >
        <div
          class="label-group"
        >
          <label
            class="label"
            for="test-granularity-select"
            id="test-granularity-select-label"
          >
            Granularity
          </label>
          <div
            class="error-icon-hidden"
          >
            <svg
              class="tui-Icon icon IconError"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 48 48"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
                fill="#E50000"
              />
              <path
                d="M7 21.5h34v5H7v-5z"
                fill="#FFF"
              />
            </svg>
          </div>
        </div>
        <div
          aria-describedby="terra-select-screen-reader-description-9"
          aria-disabled="false"
          aria-expanded="false"
          aria-haspopup="true"
          aria-label="Granularity, Granularity"
          class="select default"
          data-terra-select="true"
          data-terra-select-combobox="true"
          id="test-granularity-select"
          role="button"
          tabindex="0"
        >
          <div
            class="visually-hidden-component"
            hidden=""
          >
            <span
              id="terra-select-screen-reader-label-6"
            >
              Granularity
            </span>
            <span
              id="terra-select-screen-reader-description-9"
            >
              Collapsed combobox. List of options. Use up and down arrow keys to navigate through options. Press enter to select an option.
            </span>
          </div>
          <div
            aria-label="Granularity"
            class="display"
          >
            <div
              aria-hidden="true"
              class="placeholder"
              id="terra-select-screen-reader-placeholder-8"
            >
              Granularity
            </div>
          </div>
          <div
            class="toggle"
            data-terra-form-select-toggle="true"
          >
            <span
              class="arrow-icon"
            />
          </div>
          <span
            aria-live="off"
            class="visually-hidden-component"
          />
        </div>
      </div>
      <div
        aria-live="polite"
      />
    </div>
  </fieldset>
</div>
`;

exports[`should render only a select when supplied with the UNKNOWN precision 1`] = `
<div
  id="test"
>
  <fieldset
    class="fieldset fieldset"
  >
    <div
      class="fieldset-children"
    >
      <div
        class="field field-inline precision"
      >
        <div
          class="label-group"
        >
          <label
            class="label"
            for="test-precision-select"
            id="test-precision-select-label"
          >
            Precision
          </label>
          <div
            class="error-icon-hidden"
          >
            <svg
              class="tui-Icon icon IconError"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 48 48"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
                fill="#E50000"
              />
              <path
                d="M7 21.5h34v5H7v-5z"
                fill="#FFF"
              />
            </svg>
          </div>
        </div>
        <div
          aria-describedby="terra-select-screen-reader-description-14"
          aria-disabled="false"
          aria-expanded="false"
          aria-haspopup="true"
          aria-label="Unknown Selected., Precision"
          class="select default"
          data-terra-select="true"
          data-terra-select-combobox="true"
          id="test-precision-select"
          role="button"
          tabindex="0"
        >
          <div
            class="visually-hidden-component"
            hidden=""
          >
            <span
              id="terra-select-screen-reader-label-11"
            >
              Precision
            </span>
            <span
              id="terra-select-screen-reader-description-14"
            >
              Collapsed combobox. List of options. Use up and down arrow keys to navigate through options. Press enter to select an option.
            </span>
          </div>
          <div
            aria-label="Precision"
            class="display"
          >
            <span
              aria-hidden="true"
              id="terra-select-screen-reader-display-12"
            >
              Unknown
            </span>
          </div>
          <div
            class="toggle"
            data-terra-form-select-toggle="true"
          >
            <span
              class="arrow-icon"
            />
          </div>
          <span
            aria-live="off"
            class="visually-hidden-component"
          />
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`should render only the supplied precisions 1`] = `
<div
  id="test"
>
  <fieldset
    class="fieldset fieldset"
  >
    <div
      class="fieldset-children"
    >
      <div
        class="field field-inline precision"
      >
        <div
          class="label-group"
        >
          <label
            class="label"
            for="test-precision-select"
            id="test-precision-select-label"
          >
            Precision
          </label>
          <div
            class="error-icon-hidden"
          >
            <svg
              class="tui-Icon icon IconError"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 48 48"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
                fill="#E50000"
              />
              <path
                d="M7 21.5h34v5H7v-5z"
                fill="#FFF"
              />
            </svg>
          </div>
        </div>
        <div
          aria-describedby="terra-select-screen-reader-description-59"
          aria-disabled="false"
          aria-expanded="false"
          aria-haspopup="true"
          aria-label="Precision, Precision"
          class="select default"
          data-terra-select="true"
          data-terra-select-combobox="true"
          id="test-precision-select"
          role="button"
          tabindex="0"
        >
          <div
            class="visually-hidden-component"
            hidden=""
          >
            <span
              id="terra-select-screen-reader-label-56"
            >
              Precision
            </span>
            <span
              id="terra-select-screen-reader-description-59"
            >
              Collapsed combobox. List of options. Use up and down arrow keys to navigate through options. Press enter to select an option.
            </span>
          </div>
          <div
            aria-label="Precision"
            class="display"
          >
            <div
              aria-hidden="true"
              class="placeholder"
              id="terra-select-screen-reader-placeholder-58"
            >
              Precision
            </div>
          </div>
          <div
            class="toggle"
            data-terra-form-select-toggle="true"
          >
            <span
              class="arrow-icon"
            />
          </div>
          <span
            aria-live="off"
            class="visually-hidden-component"
          />
        </div>
      </div>
      <div
        class="field field-inline granularity"
      >
        <div
          class="label-group"
        >
          <label
            class="label"
            for="test-granularity-select"
            id="test-granularity-select-label"
          >
            Granularity
          </label>
          <div
            class="error-icon-hidden"
          >
            <svg
              class="tui-Icon icon IconError"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 48 48"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
                fill="#E50000"
              />
              <path
                d="M7 21.5h34v5H7v-5z"
                fill="#FFF"
              />
            </svg>
          </div>
        </div>
        <div
          aria-describedby="terra-select-screen-reader-description-64"
          aria-disabled="false"
          aria-expanded="false"
          aria-haspopup="true"
          aria-label="Granularity, Granularity"
          class="select default"
          data-terra-select="true"
          data-terra-select-combobox="true"
          id="test-granularity-select"
          role="button"
          tabindex="0"
        >
          <div
            class="visually-hidden-component"
            hidden=""
          >
            <span
              id="terra-select-screen-reader-label-61"
            >
              Granularity
            </span>
            <span
              id="terra-select-screen-reader-description-64"
            >
              Collapsed combobox. List of options. Use up and down arrow keys to navigate through options. Press enter to select an option.
            </span>
          </div>
          <div
            aria-label="Granularity"
            class="display"
          >
            <div
              aria-hidden="true"
              class="placeholder"
              id="terra-select-screen-reader-placeholder-63"
            >
              Granularity
            </div>
          </div>
          <div
            class="toggle"
            data-terra-form-select-toggle="true"
          >
            <span
              class="arrow-icon"
            />
          </div>
          <span
            aria-live="off"
            class="visually-hidden-component"
          />
        </div>
      </div>
      <div
        aria-live="polite"
      />
    </div>
  </fieldset>
</div>
`;

exports[`should render the same when onChange function is supplied 1`] = `
<div
  id="test"
>
  <fieldset
    class="fieldset fieldset"
  >
    <div
      class="fieldset-children"
    >
      <div
        class="field field-inline precision"
      >
        <div
          class="label-group"
        >
          <label
            class="label"
            for="test-precision-select"
            id="test-precision-select-label"
          >
            Precision
          </label>
          <div
            class="error-icon-hidden"
          >
            <svg
              class="tui-Icon icon IconError"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 48 48"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
                fill="#E50000"
              />
              <path
                d="M7 21.5h34v5H7v-5z"
                fill="#FFF"
              />
            </svg>
          </div>
        </div>
        <div
          aria-describedby="terra-select-screen-reader-description-49"
          aria-disabled="false"
          aria-expanded="false"
          aria-haspopup="true"
          aria-label="Precision, Precision"
          class="select default"
          data-terra-select="true"
          data-terra-select-combobox="true"
          id="test-precision-select"
          role="button"
          tabindex="0"
        >
          <div
            class="visually-hidden-component"
            hidden=""
          >
            <span
              id="terra-select-screen-reader-label-46"
            >
              Precision
            </span>
            <span
              id="terra-select-screen-reader-description-49"
            >
              Collapsed combobox. List of options. Use up and down arrow keys to navigate through options. Press enter to select an option.
            </span>
          </div>
          <div
            aria-label="Precision"
            class="display"
          >
            <div
              aria-hidden="true"
              class="placeholder"
              id="terra-select-screen-reader-placeholder-48"
            >
              Precision
            </div>
          </div>
          <div
            class="toggle"
            data-terra-form-select-toggle="true"
          >
            <span
              class="arrow-icon"
            />
          </div>
          <span
            aria-live="off"
            class="visually-hidden-component"
          />
        </div>
      </div>
      <div
        class="field field-inline granularity"
      >
        <div
          class="label-group"
        >
          <label
            class="label"
            for="test-granularity-select"
            id="test-granularity-select-label"
          >
            Granularity
          </label>
          <div
            class="error-icon-hidden"
          >
            <svg
              class="tui-Icon icon IconError"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 48 48"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
                fill="#E50000"
              />
              <path
                d="M7 21.5h34v5H7v-5z"
                fill="#FFF"
              />
            </svg>
          </div>
        </div>
        <div
          aria-describedby="terra-select-screen-reader-description-54"
          aria-disabled="false"
          aria-expanded="false"
          aria-haspopup="true"
          aria-label="Granularity, Granularity"
          class="select default"
          data-terra-select="true"
          data-terra-select-combobox="true"
          id="test-granularity-select"
          role="button"
          tabindex="0"
        >
          <div
            class="visually-hidden-component"
            hidden=""
          >
            <span
              id="terra-select-screen-reader-label-51"
            >
              Granularity
            </span>
            <span
              id="terra-select-screen-reader-description-54"
            >
              Collapsed combobox. List of options. Use up and down arrow keys to navigate through options. Press enter to select an option.
            </span>
          </div>
          <div
            aria-label="Granularity"
            class="display"
          >
            <div
              aria-hidden="true"
              class="placeholder"
              id="terra-select-screen-reader-placeholder-53"
            >
              Granularity
            </div>
          </div>
          <div
            class="toggle"
            data-terra-form-select-toggle="true"
          >
            <span
              class="arrow-icon"
            />
          </div>
          <span
            aria-live="off"
            class="visually-hidden-component"
          />
        </div>
      </div>
      <div
        aria-live="polite"
      />
    </div>
  </fieldset>
</div>
`;

exports[`should render with age inputs filled in when supplied 1`] = `
<div
  id="test"
>
  <fieldset
    class="fieldset fieldset"
  >
    <div
      class="fieldset-children"
    >
      <div
        class="field field-inline precision"
      >
        <div
          class="label-group"
        >
          <label
            class="label"
            for="test-precision-select"
            id="test-precision-select-label"
          >
            Precision
          </label>
          <div
            class="error-icon-hidden"
          >
            <svg
              class="tui-Icon icon IconError"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 48 48"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
                fill="#E50000"
              />
              <path
                d="M7 21.5h34v5H7v-5z"
                fill="#FFF"
              />
            </svg>
          </div>
        </div>
        <div
          aria-describedby="terra-select-screen-reader-description-34"
          aria-disabled="false"
          aria-expanded="false"
          aria-haspopup="true"
          aria-label="Before Selected., Precision"
          class="select default"
          data-terra-select="true"
          data-terra-select-combobox="true"
          id="test-precision-select"
          role="button"
          tabindex="0"
        >
          <div
            class="visually-hidden-component"
            hidden=""
          >
            <span
              id="terra-select-screen-reader-label-31"
            >
              Precision
            </span>
            <span
              id="terra-select-screen-reader-description-34"
            >
              Collapsed combobox. List of options. Use up and down arrow keys to navigate through options. Press enter to select an option.
            </span>
          </div>
          <div
            aria-label="Precision"
            class="display"
          >
            <span
              aria-hidden="true"
              id="terra-select-screen-reader-display-32"
            >
              Before
            </span>
          </div>
          <div
            class="toggle"
            data-terra-form-select-toggle="true"
          >
            <span
              class="arrow-icon"
            />
          </div>
          <span
            aria-live="off"
            class="visually-hidden-component"
          />
        </div>
      </div>
      <div
        class="field field-inline granularity"
      >
        <div
          class="label-group"
        >
          <label
            class="label"
            for="test-granularity-select"
            id="test-granularity-select-label"
          >
            Granularity
          </label>
          <div
            class="error-icon-hidden"
          >
            <svg
              class="tui-Icon icon IconError"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 48 48"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
                fill="#E50000"
              />
              <path
                d="M7 21.5h34v5H7v-5z"
                fill="#FFF"
              />
            </svg>
          </div>
        </div>
        <div
          aria-describedby="terra-select-screen-reader-description-39"
          aria-disabled="false"
          aria-expanded="false"
          aria-haspopup="true"
          aria-label="Age Selected., Granularity"
          class="select default"
          data-terra-select="true"
          data-terra-select-combobox="true"
          id="test-granularity-select"
          role="button"
          tabindex="0"
        >
          <div
            class="visually-hidden-component"
            hidden=""
          >
            <span
              id="terra-select-screen-reader-label-36"
            >
              Granularity
            </span>
            <span
              id="terra-select-screen-reader-description-39"
            >
              Collapsed combobox. List of options. Use up and down arrow keys to navigate through options. Press enter to select an option.
            </span>
          </div>
          <div
            aria-label="Granularity"
            class="display"
          >
            <span
              aria-hidden="true"
              id="terra-select-screen-reader-display-37"
            >
              Age
            </span>
          </div>
          <div
            class="toggle"
            data-terra-form-select-toggle="true"
          >
            <span
              class="arrow-icon"
            />
          </div>
          <span
            aria-live="off"
            class="visually-hidden-component"
          />
        </div>
      </div>
      <div
        aria-live="polite"
      >
        <div
          class="field field-inline age"
        >
          <div
            class="label-group"
          >
            <label
              class="label"
              for="test-age-input"
              id="test-age-input-label"
            >
              Age
            </label>
            <div
              class="error-icon-hidden"
            >
              <svg
                class="tui-Icon icon IconError"
                focusable="false"
                height="1em"
                role="presentation"
                viewBox="0 0 48 48"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
                  fill="#E50000"
                />
                <path
                  d="M7 21.5h34v5H7v-5z"
                  fill="#FFF"
                />
              </svg>
            </div>
          </div>
          <input
            class="form-input"
            id="test-age-input"
            max="6"
            min="0"
            step="1"
            type="number"
            value="3"
          />
        </div>
        <div
          class="field field-inline age-unit"
        >
          <div
            class="label-group"
          >
            <label
              class="label"
              for="test-age-unit-select"
              id="test-age-unit-select-label"
            >
              Age Precision
            </label>
            <div
              class="error-icon-hidden"
            >
              <svg
                class="tui-Icon icon IconError"
                focusable="false"
                height="1em"
                role="presentation"
                viewBox="0 0 48 48"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
                  fill="#E50000"
                />
                <path
                  d="M7 21.5h34v5H7v-5z"
                  fill="#FFF"
                />
              </svg>
            </div>
          </div>
          <div
            aria-describedby="terra-select-screen-reader-description-44"
            aria-disabled="false"
            aria-expanded="false"
            aria-haspopup="true"
            aria-label="Year(s) Selected., Age Precision"
            class="select default"
            data-terra-select="true"
            data-terra-select-combobox="true"
            id="test-age-unit-select"
            role="button"
            tabindex="0"
          >
            <div
              class="visually-hidden-component"
              hidden=""
            >
              <span
                id="terra-select-screen-reader-label-41"
              >
                Age Precision
              </span>
              <span
                id="terra-select-screen-reader-description-44"
              >
                Collapsed combobox. List of options. Use up and down arrow keys to navigate through options. Press enter to select an option.
              </span>
            </div>
            <div
              aria-label="Age Precision"
              class="display"
            >
              <span
                aria-hidden="true"
                id="terra-select-screen-reader-display-42"
              >
                Year(s)
              </span>
            </div>
            <div
              class="toggle"
              data-terra-form-select-toggle="true"
            >
              <span
                class="arrow-icon"
              />
            </div>
            <span
              aria-live="off"
              class="visually-hidden-component"
            />
          </div>
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`should render with non default inputs when supplied 1`] = `
<div
  id="test"
>
  <fieldset
    class="fieldset fieldset"
  >
    <div
      class="fieldset-children"
    >
      <div
        class="field field-inline precision"
      >
        <div
          class="label-group"
        >
          <label
            class="label"
            for="test-precision-select"
            id="test-precision-select-label"
          >
            Precision
          </label>
          <div
            class="error-icon-hidden"
          >
            <svg
              class="tui-Icon icon IconError"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 48 48"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
                fill="#E50000"
              />
              <path
                d="M7 21.5h34v5H7v-5z"
                fill="#FFF"
              />
            </svg>
          </div>
        </div>
        <div
          aria-describedby="terra-select-screen-reader-description-19"
          aria-disabled="false"
          aria-expanded="false"
          aria-haspopup="true"
          aria-label="Before Selected., Precision"
          class="select default"
          data-terra-select="true"
          data-terra-select-combobox="true"
          id="test-precision-select"
          role="button"
          tabindex="0"
        >
          <div
            class="visually-hidden-component"
            hidden=""
          >
            <span
              id="terra-select-screen-reader-label-16"
            >
              Precision
            </span>
            <span
              id="terra-select-screen-reader-description-19"
            >
              Collapsed combobox. List of options. Use up and down arrow keys to navigate through options. Press enter to select an option.
            </span>
          </div>
          <div
            aria-label="Precision"
            class="display"
          >
            <span
              aria-hidden="true"
              id="terra-select-screen-reader-display-17"
            >
              Before
            </span>
          </div>
          <div
            class="toggle"
            data-terra-form-select-toggle="true"
          >
            <span
              class="arrow-icon"
            />
          </div>
          <span
            aria-live="off"
            class="visually-hidden-component"
          />
        </div>
      </div>
      <div
        class="field field-inline granularity"
      >
        <div
          class="label-group"
        >
          <label
            class="label"
            for="test-granularity-select"
            id="test-granularity-select-label"
          >
            Granularity
          </label>
          <div
            class="error-icon-hidden"
          >
            <svg
              class="tui-Icon icon IconError"
              focusable="false"
              height="1em"
              role="presentation"
              viewBox="0 0 48 48"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
                fill="#E50000"
              />
              <path
                d="M7 21.5h34v5H7v-5z"
                fill="#FFF"
              />
            </svg>
          </div>
        </div>
        <div
          aria-describedby="terra-select-screen-reader-description-24"
          aria-disabled="false"
          aria-expanded="false"
          aria-haspopup="true"
          aria-label="Year Selected., Granularity"
          class="select default"
          data-terra-select="true"
          data-terra-select-combobox="true"
          id="test-granularity-select"
          role="button"
          tabindex="0"
        >
          <div
            class="visually-hidden-component"
            hidden=""
          >
            <span
              id="terra-select-screen-reader-label-21"
            >
              Granularity
            </span>
            <span
              id="terra-select-screen-reader-description-24"
            >
              Collapsed combobox. List of options. Use up and down arrow keys to navigate through options. Press enter to select an option.
            </span>
          </div>
          <div
            aria-label="Granularity"
            class="display"
          >
            <span
              aria-hidden="true"
              id="terra-select-screen-reader-display-22"
            >
              Year
            </span>
          </div>
          <div
            class="toggle"
            data-terra-form-select-toggle="true"
          >
            <span
              class="arrow-icon"
            />
          </div>
          <span
            aria-live="off"
            class="visually-hidden-component"
          />
        </div>
      </div>
      <div
        aria-live="polite"
      >
        <div
          class="field field-inline year"
        >
          <div
            class="label-group"
          >
            <label
              class="label"
              for="test-year-select"
              id="test-year-select-label"
            >
              Year
            </label>
            <div
              class="error-icon-hidden"
            >
              <svg
                class="tui-Icon icon IconError"
                focusable="false"
                height="1em"
                role="presentation"
                viewBox="0 0 48 48"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
                  fill="#E50000"
                />
                <path
                  d="M7 21.5h34v5H7v-5z"
                  fill="#FFF"
                />
              </svg>
            </div>
          </div>
          <div
            aria-describedby="terra-select-screen-reader-description-29"
            aria-disabled="false"
            aria-expanded="false"
            aria-haspopup="true"
            aria-label="2014 Selected., Year"
            class="select default"
            data-terra-select="true"
            data-terra-select-combobox="true"
            id="test-year-select"
            role="button"
            tabindex="0"
          >
            <div
              class="visually-hidden-component"
              hidden=""
            >
              <span
                id="terra-select-screen-reader-label-26"
              >
                Year
              </span>
              <span
                id="terra-select-screen-reader-description-29"
              >
                Collapsed combobox. List of options. Use up and down arrow keys to navigate through options. Press enter to select an option.
              </span>
            </div>
            <div
              aria-label="Year"
              class="display"
            >
              <span
                aria-hidden="true"
                id="terra-select-screen-reader-display-27"
              >
                2014
              </span>
            </div>
            <div
              class="toggle"
              data-terra-form-select-toggle="true"
            >
              <span
                class="arrow-icon"
              />
            </div>
            <span
              aria-live="off"
              class="visually-hidden-component"
            />
          </div>
        </div>
      </div>
    </div>
  </fieldset>
</div>
`;
